Fix jumping nav links; add hover state

--- a/styles/common.css
+++ b/styles/common.css
@@ -36,6 +36,7 @@ body {
     padding: 0;
     float: right;
     margin: 0.5em 0.5em 0.5em auto;
+    cursor: pointer;
 }
 
 .hamburger {
@@ -93,7 +94,7 @@ body {
 /* --- NAV --- */
 nav {
     display: grid;
-    grid-template-columns: 80% 20%;
+    grid-template-columns: 70% 30%;
     justify-content: center;
     align-items: center;
     font-size: 0.85rem;
@@ -107,7 +108,6 @@ nav {
 
 .nav-links.active {
     display: flex;
-    flex-direction: column;
     animation: fade .5s;
 }
 
@@ -136,6 +136,11 @@ nav {
     text-transform: uppercase;
     font-size: 0.8rem;
     font-weight: var(--font-weight-semi-bold);
+}
+
+.nav-link:hover,
+.nav-link:focus {
+    color: var(--grey);
 }
 
 a:active,
@@ -198,6 +203,12 @@ a:visited {
     color: var(--black);
 }
 
+.article-link:hover,
+.article-link:focus {
+    color: var(--grey);
+}
+
+
 @media (min-width: 768px) {
     .logo-container {
         margin-left: 2em;
@@ -241,11 +252,6 @@ a:visited {
 }
 
 @media (min-width: 1024px) {
-    .nav-link:hover,
-    .nav-link:active {
-        color: var(--grey);
-    }
-
     .site-name {
         font-size: 1.2rem;
     }
